fixed header gap

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
   height: 100%;
   margin: 0;
   background-color: white;
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 #wrapper {
